# syndicator

./: .env.example  .gitignore  README.md  config.local.yaml.example  pyproject.toml  syndicator.yaml
deploy/: ch.sailingnomads.syndicator-watch.plist  syndicator-watch.service
docs/: runbook.md
prompts/: _human_voice.md  caption_facebook.md  caption_instagram.md  caption_x.md  crop_focus.md  translate.md  translate_pirate.md
src/syndicator/: __init__.py  cli.py  config.py  llm.py  model.py  pipeline.py  siteurl.py  state.py
src/syndicator/nodes/: __init__.py  backlink.py  bootstrap.py  caption.py  export.py  extract.py  hugo.py  journeymap.py  media_adapt.py  publish_git.py  social_plan.py  translate.py  watch.py
templates/: review.html.j2
tests/: conftest.py  test_backlink.py  test_caption.py  test_export.py  test_extract.py  test_hugo.py  test_media_adapt.py  test_site_pipeline.py  test_social_plan.py  test_state.py  test_translate.py
tests/fixtures/golden/: 2024-06-14_Renan__index.en.md  2026-01-17_Frühlingspläne_2026__index.de.md  2026-04-08_Segeln__index.de.md  2026-05-19_Charly_Superstar__index.de.md  2026-05-28_Lefkada__index.de.md  2026-06-03_Athen__index.de.md  2026-06-10_Griechenland_❤️__index.de.md
tests/fixtures/journals/: 2026_01_17.md  2026_04_06_template.md  2026_04_08.md  2026_05_19.md  2026_05_25.md  2026_06_03.md  2026_06_10.md
tests/fixtures/pages/: Renan.md
