[project]
name = "syndicator"
version = "0.1.0"
description = "Logseq publish pipeline: Hugo site, translations, journey map and social media post packages for sailingnomads.ch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "openai>=1.60",
    "typer>=0.12",
    "pillow>=10.3",
    "httpx>=0.27",
    "jinja2>=3.1",
    "watchdog>=4.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
syndicator = "syndicator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syndicator"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
